force-app/main/default/objects/osf_negotiated_discount__c/osf_negotiated_discount__c.object-meta.xml
<CustomObject>
    <description>Negotiated Discount with the Account based on Product, Catalog or Coupon</description>
    <label>Negotiated Discount</label>
    <nameField>
        <displayFormat>ND-{000000}</displayFormat>
        <label>Discount Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Negotiated Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>