force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_account__c.field-meta.xml
<CustomField>
    <fullName>osf_account__c</fullName>
    <description>Account that has the discount</description>
    <inlineHelpText>Account that has the discount</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Negotiated Discounts</relationshipLabel>
    <relationshipName>osf_negotiated_discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>