force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_active__c.field-meta.xml
<CustomField>
    <fullName>osf_active__c</fullName>
    <formula>AND(TODAY() &gt;= osf_start_date__c, TODAY() &lt;= osf_end_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>