force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_catalog_id__c.field-meta.xml
<CustomField>
    <fullName>osf_catalog_id__c</fullName>
    <label>Catalog Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>