force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_coupon__c.field-meta.xml
<CustomField>
    <fullName>osf_coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coupon</label>
    <referenceTo>ccrz__E_Coupon__c</referenceTo>
    <relationshipLabel>Negotiated Discounts</relationshipLabel>
    <relationshipName>osf_negotiated_discounts</relationshipName>
    <type>Lookup</type>
</CustomField>