force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_discount_rate__c.field-meta.xml
<CustomField>
    <fullName>osf_discount_rate__c</fullName>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>