force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_end_date__c.field-meta.xml
<CustomField>
    <fullName>osf_end_date__c</fullName>
    <description>Discount End Date</description>
    <inlineHelpText>Discount End Date</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>