force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_negotiated_discount_id__c.field-meta.xml
<CustomField>
    <fullName>osf_negotiated_discount_id__c</fullName>
    <externalId>true</externalId>
    <label>Negotiated Discount Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>