force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_product__c.field-meta.xml
<CustomField>
    <fullName>osf_product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to specific CC Product</description>
    <inlineHelpText>Lookup to specific CC Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Negotiated Discounts</relationshipLabel>
    <relationshipName>osf_negotiated_discounts</relationshipName>
    <type>Lookup</type>
</CustomField>