force-app/main/default/objects/osf_negotiated_discount__c/fields/osf_start_date__c.field-meta.xml
<CustomField>
    <fullName>osf_start_date__c</fullName>
    <description>Discount Start Date</description>
    <inlineHelpText>Discount Start Date</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>