force-app/main/default/objects/osf_negotiated_discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>osf_negotiated_discount_id__c</columns>
    <columns>NAME</columns>
    <columns>osf_account__c</columns>
    <columns>osf_active__c</columns>
    <columns>osf_catalog_id__c</columns>
    <columns>osf_coupon__c</columns>
    <columns>osf_discount_rate__c</columns>
    <columns>osf_end_date__c</columns>
    <columns>osf_start_date__c</columns>
    <columns>osf_product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>osf_account__c</field>
        <operation>contains</operation>
        <value>FUND.VEDRUNA CAT.EDUC. RIPOLL</value>
    </filters>
    <label>All</label>
</ListView>